--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
@@ -54,6 +54,7 @@
           .paycheck{
             float: right;
             overflow: visible;
+            text-align: left;
 
             .container{
               margin: 20px 0 0 22px;
