--- a/Chalkable.Web/assets/jade/activities/apps/install-app-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/install-app-dialog.jade
@@ -25,8 +25,4 @@ app = self.getApp()
             .install-info
                 .install-btn
                     +Button(disabled = true).special-button.green-button Install App
-                .paycheck
-                    .container
-                        .top
-                            .middle
-                                .bottom
+                +PayCheck()
