--- a/Chalkable.Web/assets/sass/partials/main/developer/_api.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_api.scss
@@ -240,28 +240,27 @@ BODY {
                           .text-title{
                             color: #c46d26;
                             font-weight: bold;
-                            left: 17px;
-                            top: 11px;
-                            position: absolute;
                             text-transform: uppercase;
                             font-size: 14px;
+                            margin-left: 14px;
+                            display: inline-block;
                           }
                           position: relative;
                           height: 189px;
 
                           .tab-headers{
                             width: 480px;
-                            margin-left: auto;
-                            margin-right: 17px;
+                            margin-left: 10px;
+                            display: inline-block;
                             cursor: pointer;
 
                             .tab-header{
+                              position: relative;
+                              display: inline-block;
                               width: 102px;
                               font-weight: bold;
                               background-color: #ffffff;
                               color: #cfcfcf;
-                              position: absolute;
-                              top: 6px;
                               z-index: 777;
                               height: 21px;
                               font-size: 12px;
@@ -304,16 +303,22 @@ BODY {
                           }
 
                           .tab-content{
-                            height: 125px;
+                            min-height: 125px;
                             margin-bottom: 24px;
                             width: 599px;
                             background-color: #DCEEF0;
                             border: 2px solid #86CBD3;
                             border-right: 2px solid #86CBD3;
                             border-bottom: 2px solid #86CBD3;
-                            position: absolute;
-                            bottom: 2px;
-                            left: 15px;
+                            margin-left: 15px;
+                            margin-top: -2px;
+                            overflow: auto;
+
+                            pre{
+                              border-radius: 0 !important;
+                              height: 100%;
+                            }
+
                             }
                         }
 
