--- a/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
+++ b/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
@@ -14,7 +14,7 @@ mixin ApiCallForm(controllerInfo, role)
                         span.header-line
                         .header-body
                             .call-type(class=methodType)
-                            .action(data-method-name=cntMethod.getName())=cntMethod.getName()
+                            .action(data-method-name=controllerInfo.getName() + "/" + cntMethod.getName())=cntMethod.getName()
                             .toggle
                             .description=cntMethod.getDescription()
                     .details
@@ -83,6 +83,9 @@ apiInfo = self.getApiInfo()
         The user role defines the level of access.
     div#api-search-field
 
+            +SearchBox(chlk.services.ApiService, "getList", chlk.templates.developer.ApiListTpl, apiInfo.getRole())#api-search-box(name="apiSearchbox")
+            div.search-btn.api-search-btn
+    .api-calls-seq.call-tree
     roleControllers = apiInfo.getControllers() || []
         each contr in roleControllers
             +ApiCallForm(contr, apiInfo.getRole())
